[gd_scene load_steps=5 format=3 uid="uid://h2ebo4iheq82"]

[ext_resource type="Script" path="res://code/GUI/settings.gd" id="1_vobgm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irgma"]
bg_color = Color(0.297993, 0.297993, 0.297993, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hgbev"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ftdq4"]
font_size = 32

[node name="Settings" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_vobgm")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_irgma")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 250
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 250

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio Volume"
label_settings = SubResource("LabelSettings_hgbev")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasterVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
max_value = 1.2
step = 0.1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(135.74, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Master"
label_settings = SubResource("LabelSettings_ftdq4")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer2/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
max_value = 1.2
step = 0.1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(153.47, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Music"
label_settings = SubResource("LabelSettings_ftdq4")

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SfxVolume" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer3/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
max_value = 1.2
step = 0.1

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Sound Effects"
label_settings = SubResource("LabelSettings_ftdq4")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Control/MasterVolume" to="." method="_on_master_volume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer2/Control/MusicVolume" to="." method="_on_music_volume_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer3/Control/SfxVolume" to="." method="_on_sfx_volume_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
